src/tests/setup.ts
// Jest setup file
// This file runs before all tests

// Set test environment variables
process.env.NODE_ENV = 'test';

// Global test utilities can be added here
global.console = {
  ...console,
  // Uncomment to ignore console logs during tests
  // log: jest.fn(),
  // debug: jest.fn(),
  // info: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
};

// Add any global test setup here
beforeAll(() => {
  // Global setup before all tests
});

afterAll(() => {
  // Global cleanup after all tests
});